instrujs/sass/_menu.scss
/* Menu */
/* Original work MIT Copyright (c) 2019 by Ryan Morr (https://codepen.io/ryanmorr/pen/JdOvYR)
   Ported on SASS/SCCS, modified for OpenCPN and wxWidgets/WebKit */
@use 'instrujs';

$mnbrdcolor    : #bbb;
$mnbgdcolor    : #eee;
$mnboxshadow   : rgba(0,0,0,.2);
$mnbtncolor    : #444;
$mnbtnhover    : #fff;
$mnbtnbkgd     : #2E3940;
$mnbtnbord     : #2E3940;
$mnradgradstart: #5D6D79;
$mnradgradstop : #2E3940;
$mnsepbordbotm : #fff;
$mnsepbkgd     : #aaa;
$mnsubmnleft   : #808080;
$mnsubmnhover  : #fff;

.menu {
    position: absolute;
    top: 1%;
    left: 1%;
    width: 135px;
    padding: 1px;
    margin: 0;
    border: 1px solid $mnbrdcolor;
    background: $mnbgdcolor;
    background: -webkit-linear-gradient(to bottom, instrujs.$radgradstart 0%, instrujs.$radgradstop 100px, instrujs.$radgradstop 100%);
    background: linear-gradient(to bottom, instrujs.$radgradstart 0%, instrujs.$radgradstop 100px, instrujs.$radgradstop 100%);
    z-index: 100;
    border-radius: 3px;
    box-shadow: 1px 1px 4px $mnboxshadow;
    opacity: 0;
    -webkit-transform: translate(0, 15px) scale(.95);
    transform: translate(0, 15px) scale(.95);
    transition: transform 0.1s ease-out, opacity 0.1s ease-out;
}

.menu-item {
    display: block;
    position: relative;
    margin: 0;
    padding: 0;
    white-space: nowrap;
}

.menu-btn { 
    display: block;
    color: $mnbtncolor;
    font-family: instrujs.$ifontfamily;
    font-size: 11px;
    cursor: pointer;
    border: 1px solid transparent;
    white-space: nowrap;
    padding: 3px 4px;
    border-radius: 2px;
}

button.menu-btn {
    background: none;
    line-height: normal;
    overflow: visible;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    width: 100%;
    text-align: left;
}

a.menu-btn {
    outline: 0 none;
    text-decoration: none;
}

.menu-text {
    margin-left: 2px;
}

.menu-item:hover > .menu-btn { 
    color: $mnbtnhover; 
    outline: none; 
    background-color: $mnbtnbkgd;
    background: -webkit-linear-gradient(to bottom, $mnradgradstart, $mnradgradstop);
    background: linear-gradient(to bottom, $mnradgradstart, $mnradgradstop);
    border: 1px solid $mnbtnbord;
}

.menu-item-disabled {
    opacity: .5;
    pointer-events: none;
}

.menu-item-disabled .menu-btn {
    cursor: default;
}

.menu-separator {
    display:block;
    margin: 5px 3px;
    height:1px;
    border-bottom: 1px solid $mnsepbordbotm;
    background-color: $mnsepbkgd;
}

.menu-item-submenu::after {
    content: "";
    position: absolute;
    right: 1px;
    top: 50%;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    border: 5px solid transparent;
    border-left-color: $mnsubmnleft; 
}

.menu-item-submenu:hover::after {
    border-left-color: $mnsubmnhover;
}

.menu .menu {
    top: 2px;
    left: 20%;
}

.menu-show,
.menu-item:hover > .menu {
    opacity: 1;
    -webkit-transform: translate(0, 0) scale(1);
    transform: translate(0, 0) scale(1);
    pointer-events: auto;
}

.menu-item:hover > .menu {
    -webkit-transition-delay: 300ms;
    transition-delay: 300ms;
}

